--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <item name="tagSeatRow" type="id"/>
+    <item name="tagSeatColumn" type="id"/>
+    <item name="tagSeatCost" type="id"/>
 </resources>
